package com.aims.payment_service.entity;

public enum PaymentMethod {
    VietQR,
    PayPal
}
